--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "newtab-games",
+  "name": "wminx",
   "version": "1.0.0",
-  "private": true,
+  "main": "index.js",
   "scripts": {
-    "build": "echo \"No client to build\"",
     "start": "node index.js"
   },
-  "engines": {
-    "node": ">=18"
-  },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.18.2"
   }
 }
